mdapipkg/objects/Shipment__c.object
<CustomObject>
    <fields>
        <fullName>Default_Shipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <referenceTo>Destination__c</referenceTo>
        <relationshipLabel>Shipment Information</relationshipLabel>
        <relationshipName>Shipment_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Factory__c</fullName>
        <label>Factory</label>
        <referenceTo>Factory__c</referenceTo>
        <relationshipLabel>Shipment Information</relationshipLabel>
        <relationshipName>Shipment_Information</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Freight_Charges__c</fullName>
        <label>Freight Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incoterm_Description__c</fullName>
        <formula>IF ( ISPICKVAL( Incoterm__c ,&quot;FOB&quot;), &quot;Free on Board&quot;, 
IF ( ISPICKVAL( Incoterm__c ,&quot;CIF&quot;), &quot;Cost Insurance &amp; Freight&quot;,
&quot;No Entry&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incoterm Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterm__c</fullName>
        <label>Incoterm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FOB</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>EXW</fullName>
                </value>
                <value>
                    <fullName>FCA</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>CFR</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>DAF</fullName>
                </value>
                <value>
                    <fullName>DES</fullName>
                </value>
                <value>
                    <fullName>DEQ</fullName>
                </value>
                <value>
                    <fullName>DDU</fullName>
                </value>
                <value>
                    <fullName>DDP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Shipment Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Incoterm Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>